fix text align

--- a/styles/home.css
+++ b/styles/home.css
@@ -49,7 +49,7 @@
 }
 
 .feed a.create-post {
-	line-height: 2.5;
+	line-height: 2.3;
 	height: 40px;
 	margin: auto;
 	margin-top: 15px;
